// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root size-18 checkbox-color-blue"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        disabled={true}
        onChange={null}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root size-18 checkbox-color-blue uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        disabled={true}
        onChange={null}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
